--- a/docs/.vitepress/vitepress/styles/base.scss
+++ b/docs/.vitepress/vitepress/styles/base.scss
@@ -239,10 +239,15 @@ form {
 }
 
 details {
+  &:not([open]) {
+    cursor: pointer;
+  }
+  
   summary {
     margin: 16px 0;
     font-size: 18px;
     font-weight: 600;
+    cursor: pointer;
   }
 }
 
